[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/scene/enemy/EnemySpawn.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 12.1404

[node name="EnemySpawn" type="Area2D"]
pause_mode = 1
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="PivotSpawn" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="PivotSpawn"]
modulate = Color( 0.0980392, 0.0117647, 0.831373, 1 )
shape = SubResource( 1 )

[node name="SpawnTime" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="area_entered" from="PivotSpawn" to="." method="_on_PivotSpawn_area_entered"]
[connection signal="body_entered" from="PivotSpawn" to="." method="_on_PivotSpawn_body_entered"]
[connection signal="timeout" from="SpawnTime" to="." method="_on_SpawnTime_timeout"]
